# eyou_motor

./: README.md
doc/: YiyouServo_V1.3.eds
model/谐波关节模型图2.0-241224/: PH08-2.0.stp  PH11-2.0.stp
model/谐波关节模型图2.1-241224/: PH08-2.1.stp  PH11-2.1.stp
sdk/sdk_aarch64_linux_gnu_20250120/doc/html/: annotated.html  classes.html  eu__harmonic_8h.html  eu__harmonic_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_func.html  globals_h.html  globals_type.html  index.html  menudata.js  struct__harmonic__CanMsg-members.html  struct__harmonic__CanMsg.html
sdk/sdk_aarch64_linux_gnu_20250120/example/: test_csp_mode.cpp  test_ip_mode.cpp  test_pt_mode.cpp  test_pv_mode.cpp  test_read.cpp  test_two_device_ip_mode.cpp
sdk/sdk_gnu_20250120/doc/html/: functions.html  (+8 more)
sdk/sdk_gnu_20250120/example/: CMakeLists.txt  test_csp_mode.cpp  test_csv_mode.cpp  test_ip_mode.cpp  test_loop_pp_mode.cpp  test_pp_mode.cpp  test_pt_mode.cpp  test_pv_mode.cpp  test_two_device_pp_mode.cpp  test_two_device_read.cpp
sdk/sdk_gnu_20250120/include/: eu_harmonic.h
sdk/sdk_x86_windows_gnu_20250120/example/: CMakeLists.txt  test_csp_mode.cpp  test_csv_mode.cpp  test_ip_mode.cpp  test_loop_pp_mode.cpp  test_pp_mode.cpp  test_pt_mode.cpp  test_pv_mode.cpp  test_read.cpp  test_two_device_ip_mode.cpp  test_two_device_pp_mode.cpp  test_two_device_read.cpp
sdk/sdk_x86_windows_gnu_20250120/include/: eu_harmonic.h
sdk/sdk_x86_x64_linux_gnu_20250120/example/: test_csv_mode.cpp  test_pp_mode.cpp
(+30 files in other folders)
